# ferroclaw

./: .gitignore  Cargo.toml  LICENSE  QUALITY.md  README.md
.github/workflows/: ci.yml
docs/remotion/: package-lock.json
docs/remotion/src/: Root.tsx
docs/reports/analysis/: CODE_INSPECTION_REPORT.md  COMPARISON_REPORT.md  DOCUMENTATION_VALIDATION.md  ENVIRONMENT_SETUP_STATUS.md  GLITTER_VERBS_ANALYSIS.md  HERMES_FEATURE_RESEARCH.md  HOOK_INTEGRATION.md  HOOK_SYSTEM_SUMMARY.md  INTEGRATION_REPORT.md  REVIEW_COMMAND_DESIGN.md  RUNTIME_TRACE_REPORT.md  SUBTASK3_COMPLETE.md  SUBTASK4_COMPLETE.md  TASK_SYSTEM_IMPLEMENTATION.md  ferroclaw-retrospective.html
docs/reports/logs/: test_output.txt
docs/reports/testing/: BUILD_AND_TEST_STATUS.md  FINAL_TEST_REPORT.md  TEST_ENVIRONMENT_SETUP.md  TEST_EXECUTION_LOG.md  TEST_EXECUTION_SUMMARY.md  TEST_EXECUTIVE_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_ANALYSIS.md  TEST_SUMMARY_HIGHLIGHTS.md  test_case_inventory.md  test_environment_verification.md  test_results_summary.md
docs/reports/tui/: KINETIC_TUI.md  MINIMAL_TUI.md  MINIMAL_TUI_STATUS.md  THINKING_INDICATOR_DESIGN.md  THINKING_INDICATOR_INTEGRATION.md  THINKING_INDICATOR_SUBTASK3_SUMMARY.md  THINKING_INDICATOR_SUMMARY.md  THINKING_INDICATOR_VISUALS.md  TUI_COMPARISON.md  TUI_DESIGNS.md  TUI_DESIGN_ANALYSIS.md  TUI_LAYOUT_DIAGRAM.txt  TUI_PREVIEW_GUIDE.md  TUI_PREVIEW_README.md  TUI_RESOURCES_SUMMARY.md  TUI_TERMINAL_PREVIEW.txt  TUI_VISUAL_MOCKUP.md
docs/research/: llm_research.md
examples/: compression_benchmark.rs  compression_demo.rs  websocket_demo.rs
scripts/: install.sh  make_scripts_executable.sh  uninstall.sh
scripts/tests/: conversation_test.sh
scripts/tui/: TUI_DEMO.sh  demo_all_tuis.sh  switch_tui.sh
src/: auth.rs  cli.rs  config.rs  gateway.rs  lib.rs  main.rs  model_auto.rs  process.rs  setup.rs  telegram.rs  tool.rs  types.rs
src/agent/: context.rs  loop.rs  orchestration.rs
src/channels/: discord.rs  router.rs  whatsapp.rs
src/hooks/: builtin.rs  mod.rs
src/mcp/: cache.rs  client.rs  compression.rs  diet.rs
src/modes/: plan.rs  plan_test.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  openrouter.rs  streaming.rs  zai.rs
src/security/: audit.rs
src/skills/: executor.rs  loader.rs
src/tasks/: mod.rs  store.rs  tasks_test.rs
src/tools/: analyze_code.rs  build.rs  builtin.rs  commit.rs  evaluate_result.rs  file_edit.rs  filter.rs  find_bugs.rs  generate_tests.rs  grep.rs  monitoring.rs  review_code.rs
src/tools/review/: command.rs
src/tui/: app.rs  composer.rs  events.rs  glitter_verbs.rs  hermes_tui.rs  hermes_ui.rs  kinetic_tui.rs  live_panels.rs  minimal_tui.rs  mod.rs  model_select.rs  orchestrator_tui.rs  orchestrator_ui.rs  thinking_indicator.rs  thinking_indicator_demo.rs  ui.rs
tests/: integration_agent.rs  integration_all_features.rs  integration_channels.rs  integration_config.rs  integration_providers.rs  integration_tui.rs  integration_types.rs  integration_websocket.rs
